--- a/tool/pin-2.12-58423-gcc.4.4.7-linux/source/tools/SiAct/makefile.rules
+++ b/tool/pin-2.12-58423-gcc.4.4.7-linux/source/tools/SiAct/makefile.rules
@@ -44,7 +44,7 @@ SA_TOOL_ROOTS :=
 APP_ROOTS :=
 
 # This defines any additional object files that need to be compiled.
-OBJECT_ROOTS := 
+OBJECT_ROOTS := siact helper memory cache strategy hierarchy approx 
 
 # This defines any additional dlls (shared objects), other than the pintools, that need to be compiled.
 DLL_ROOTS :=
@@ -69,6 +69,7 @@ LIB_ROOTS :=
 # Build rules
 #
 ##############################################################
-
-# This section contains the build rules for all binaries that have special build rules.
-# See makefile.default.rules for the default build rules.
+$(OBJDIR)%$(PINTOOL_SUFFIX): $(OBJDIR)%$(OBJ_SUFFIX)
+	$(LINKER) $(TOOL_LDFLAGS) $(LINK_EXE)$@ \
+	$(OBJDIR)helper.o $(OBJDIR)strategy.o $(OBJDIR)cache.o $(OBJDIR)memory.o $(OBJDIR)approx.o $(OBJDIR)hierarchy.o \
+	 $< $(TOOL_LPATHS) $(TOOL_LIBS)
