--- a/tool/pin-2.12-58423-gcc.4.4.7-linux/source/tools/SiAct/test/hwmodel.cfg
+++ b/tool/pin-2.12-58423-gcc.4.4.7-linux/source/tools/SiAct/test/hwmodel.cfg
@@ -1,2 +1,2 @@
-0 seed=55 type=precise,none,none l1i=4,512,4 l1d=4,512,4 l2=16,512,4 
-1 seed=66 type=approximate,medium,static l1i=4,512,4 l1d=4,512,4 l2=16,512,4 
+0 seed=55 type=precise cache-type=none mem-type=none l1i=4,512,4 l1d=4,512,4 l2=16,512,4 
+1 seed=66 type=approximate cache-type=medium mem-type=static l1i=4,512,4 l1d=4,512,4 l2=16,512,4 
