fixed some issues

--- a/tool/pin-2.12-58423-gcc.4.4.7-linux/source/tools/SiAct/makefile.rules
+++ b/tool/pin-2.12-58423-gcc.4.4.7-linux/source/tools/SiAct/makefile.rules
@@ -70,6 +70,6 @@ LIB_ROOTS :=
 #
 ##############################################################
 $(OBJDIR)%$(PINTOOL_SUFFIX): $(OBJDIR)%$(OBJ_SUFFIX)
-	$(LINKER) $(TOOL_LDFLAGS) $(LINK_EXE)$@ \
+	$(LINKER) $(TOOL_LDFLAGS) -Wl,--no-undefined $(LINK_EXE)$@ \
 	$(OBJDIR)helper.o $(OBJDIR)strategy.o $(OBJDIR)cache.o $(OBJDIR)memory.o $(OBJDIR)approx.o $(OBJDIR)hierarchy.o \
 	 $< $(TOOL_LPATHS) $(TOOL_LIBS)
