--- a/tool/pin-2.12-58423-gcc.4.4.7-linux/source/tools/SiAct/makefile.rules
+++ b/tool/pin-2.12-58423-gcc.4.4.7-linux/source/tools/SiAct/makefile.rules
@@ -44,7 +44,7 @@ SA_TOOL_ROOTS :=
 APP_ROOTS :=
 
 # This defines any additional object files that need to be compiled.
-OBJECT_ROOTS := siact helper memory cache strategy hierarchy approx 
+OBJECT_ROOTS := siact helper memory cache strategy hierarchy approx xorshift
 
 # This defines any additional dlls (shared objects), other than the pintools, that need to be compiled.
 DLL_ROOTS :=
@@ -71,5 +71,5 @@ LIB_ROOTS :=
 ##############################################################
 $(OBJDIR)%$(PINTOOL_SUFFIX): $(OBJDIR)%$(OBJ_SUFFIX)
 	$(LINKER) $(TOOL_LDFLAGS) -Wl,--no-undefined $(LINK_EXE)$@ \
-	$(OBJDIR)helper.o $(OBJDIR)strategy.o $(OBJDIR)cache.o $(OBJDIR)memory.o $(OBJDIR)approx.o $(OBJDIR)hierarchy.o \
+	$(OBJDIR)helper.o $(OBJDIR)xorshift.o $(OBJDIR)strategy.o $(OBJDIR)cache.o $(OBJDIR)memory.o $(OBJDIR)approx.o $(OBJDIR)hierarchy.o \
 	 $< $(TOOL_LPATHS) $(TOOL_LIBS)
